--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.2",
     "ecommerce-application": "file:",
     "ioredis": "^5.6.1",
+    "midtrans-client": "^1.4.2",
     "multer": "^1.4.5-lts.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
